[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/Scene/Trigger/NPCArticleTrigger_OdeToJoy.gd" type="Script" id=1]
[ext_resource path="res://Picture/Scene/OdeToJoy/OdeToJoy5_2_highlight.png" type="Texture" id=2]
[ext_resource path="res://Picture/Scene/OdeToJoy/OdeToJoy5_2.png" type="Texture" id=3]

[node name="NPCArticleTrigger_OdeToJoy5_2" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="control4" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="colorRectV1" type="ColorRect" parent="control4"]
margin_left = 92.0
margin_right = 121.0
margin_bottom = 259.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="control3" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="textureRect1" type="TextureRect" parent="control3"]
margin_top = 208.0
margin_right = 125.0
margin_bottom = 313.0
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="textureRect2" type="TextureRect" parent="control3"]
margin_top = 208.0
margin_right = 125.0
margin_bottom = 313.0
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="area2D1" type="Area2D" parent="."]
position = Vector2( 0, 210 )
collision_layer = 4
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area2D1"]
polygon = PoolVector2Array( 0, 0, 90, 0, 90, -210, 120, -210, 120, 100, 0, 100 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="area2D1" to="." method="_on_area2D1_area_entered"]
[connection signal="area_exited" from="area2D1" to="." method="_on_area2D1_area_exited"]
[connection signal="mouse_entered" from="area2D1" to="." method="_on_area2D1_mouse_entered"]
[connection signal="mouse_exited" from="area2D1" to="." method="_on_area2D1_mouse_exited"]
